# kv

./: .darglint  .dockerignore  .env.dev  .gitignore  README.md  pyproject.toml  tasks.py
configurations/: core.yaml  telegram.yaml
consumer/: __main__.py
deploy/: Dockerfile  docker-compose.yaml
kv/: __init__.py
kv/constructor/: __init__.py  registry.py
kv/core/: base.py
kv/mq/: functional.py  rpc.py  scheme.py
kv/service/: transport.py
tests/: conftest.py  test_bot.py
tg/: __main__.py  bot.py  containers.py  types.py
tg/handlers/: commands.py  photo.py  text.py
tg/utils/: media.py
